--- a/LoginStudy/Base.lproj/Main.storyboard
+++ b/LoginStudy/Base.lproj/Main.storyboard
@@ -18,18 +18,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nGw-kv-17w">
-                                <rect key="frame" x="155" y="400.33333333333331" width="83" height="76.666666666666686"/>
+                                <rect key="frame" x="123.66666666666669" y="400.33333333333331" width="146" height="76.666666666666686"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FmH-An-zwg">
-                                        <rect key="frame" x="0.0" y="0.0" width="83" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="146" height="34.333333333333336"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="로그인"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="카카오로 시작하기"/>
                                         <connections>
                                             <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UP3-ir-YaW"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7u-Pe-rMe">
-                                        <rect key="frame" x="0.0" y="42.333333333333371" width="83" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="42.333333333333371" width="146" height="34.333333333333343"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="로그아웃"/>
                                         <connections>
@@ -46,6 +46,10 @@
                             <constraint firstItem="nGw-kv-17w" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hL9-9g-ssv"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="FmH-An-zwg" id="WVz-jz-LlT"/>
+                        <outlet property="logoutButton" destination="f7u-Pe-rMe" id="FXB-4k-Lxw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
