--- a/LoginStudy/StoryBoard/Base.lproj/Main.storyboard
+++ b/LoginStudy/StoryBoard/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nGw-kv-17w">
-                                <rect key="frame" x="123.66666666666669" y="366.66666666666669" width="146" height="119"/>
+                                <rect key="frame" x="123.66666666666669" y="345.33333333333331" width="146" height="161.33333333333331"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FmH-An-zwg">
                                         <rect key="frame" x="0.0" y="0.0" width="146" height="34.333333333333336"/>
@@ -58,8 +58,13 @@
                                             <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UP3-ir-YaW"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2H-GH-Ash">
+                                        <rect key="frame" x="0.0" y="42.333333333333371" width="146" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="네이버로 시작하기"/>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7u-Pe-rMe">
-                                        <rect key="frame" x="0.0" y="42.333333333333314" width="146" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="84.666666666666686" width="146" height="34.333333333333343"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="로그아웃"/>
                                         <connections>
@@ -67,7 +72,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilY-xB-xj7">
-                                        <rect key="frame" x="0.0" y="84.666666666666629" width="146" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="126.99999999999999" width="146" height="34.333333333333329"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="회원탈퇴">
                                             <color key="baseForegroundColor" systemColor="systemRedColor"/>
@@ -79,28 +84,17 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="nMx-FQ-BEs">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nMx-FQ-BEs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="081-ru-SC0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nMx-FQ-BEs" secondAttribute="bottom" id="3lA-XS-Kqn"/>
                             <constraint firstItem="nGw-kv-17w" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="DOU-kc-jBz"/>
-                            <constraint firstItem="nMx-FQ-BEs" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ob3-4F-s6T"/>
-                            <constraint firstItem="nMx-FQ-BEs" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Zgf-Lu-Omd"/>
                             <constraint firstItem="nGw-kv-17w" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hL9-9g-ssv"/>
-                            <constraint firstItem="nMx-FQ-BEs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tQb-cq-jK8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nMx-FQ-BEs" secondAttribute="trailing" id="v0d-o6-0Sz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="WjI-Qr-GfL"/>
                     <connections>
                         <outlet property="deleteAccountButton" destination="ilY-xB-xj7" id="vuh-Ca-E9G"/>
-                        <outlet property="indicator" destination="nMx-FQ-BEs" id="sUH-b0-AXy"/>
                         <outlet property="loginButton" destination="FmH-An-zwg" id="WVz-jz-LlT"/>
                         <outlet property="loginStackView" destination="nGw-kv-17w" id="vQx-vY-WtY"/>
                         <outlet property="logoutButton" destination="f7u-Pe-rMe" id="FXB-4k-Lxw"/>
